--- a/task1/header.html
+++ b/task1/header.html
@@ -31,11 +31,14 @@
               <a href="./cart.html" class="p-2"
                 ><i class="fa-solid fa-cart-shopping"></i
               ></a>
-
             </nav>
           </div>
-          <div class="col-lg-2 col-12">
-            <ul id="dropDown"></ul>
+          <div
+            class="col-lg-2 col-12 d-flex justify-content-center align-items-center gap-3 p-2"
+          >
+            <div id="logout"></div>
+            <div id="userName"></div>
+            <!-- <a href="./cart.html" class="p-2">Logout</a> -->
             <!-- <a
               class="btn-style d-flex justify-content-center align-items-center"
               >Sign up</a
@@ -44,6 +47,5 @@
         </div>
       </div>
     </header>
-    <script type="module" src="./javascript/header.js"></script>
   </body>
 </html>
