--- a/task1/register.html
+++ b/task1/register.html
@@ -15,11 +15,30 @@
       <!-- onsubmit="register(); return false;" -->
       <form id="register-form" class="text-center">
         <label for="chk" aria-hidden="true">Create New Account</label>
-        <input id="name" type="text" name="txt" placeholder="User name" required="" />
-        <input id="email" type="email" name="email" placeholder="Email" required />
+        <input
+          id="name"
+          type="text"
+          name="txt"
+          placeholder="User name"
+          required=""
+        />
+        <input
+          id="email"
+          type="email"
+          name="email"
+          placeholder="Email"
+          required
+        />
 
-        <input id="pw" type="password" name="pswd" placeholder="Password" required />
-        <a class="signup" id="register" >Register</a>
+        <input
+          id="pw"
+          type="password"
+          name="pswd"
+          placeholder="Password"
+          required
+        />
+        <a class="signup" id="register">Register</a>
+        <a class="p-2" href="./login.html">Go to login Page</a>
         <!-- onclick="store()" -->
         <!-- <button class="signup" type="submit">Register</button> -->
         <p class="error"></p>
@@ -27,6 +46,6 @@
         <!-- href="./login.html" -->
       </form>
     </main>
-    <script type="module" src="./javascript/register.js" ></script>
+    <script type="module" src="./javascript/register.js"></script>
   </body>
 </html>
