--- a/task1/contact.html
+++ b/task1/contact.html
@@ -18,10 +18,14 @@ href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
   <div id="header"></div>
 
   <script>
-    fetch('/header.html')
-      .then(response => response.text())
-      .then(data => {
-        document.getElementById('header').innerHTML = data;
+    fetch("/header.html")
+      .then((response) => response.text())
+      .then((data) => {
+        document.getElementById("header").innerHTML = data;
+        let script = document.createElement("script");
+        script.type = "module";
+        script.src = "./javascript/header.js";
+        document.body.appendChild(script);
       });
   </script>
 
