--- a/task1/home.html
+++ b/task1/home.html
@@ -12,6 +12,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="./styles/home.css" />
+    <link rel="stylesheet" href="./styles/loading.css" />
     <title>Document</title>
   </head>
   <body>
@@ -19,29 +20,38 @@
     <article>
       <h1>Shopping Website</h1>
     </article>
+    <main class="container d-flex justify-content-center align-items-center h-100">
+      <div id="loader" class="loader"></div>
+      <div id="error"></div>
+      <div id="content" style="display: none;">
+        <!-- Content will go here once loaded -->
+        <section class="category container">
+          <h3>Shopping by Categories</h3>
+          <div class="single-category row gap-1 text-center"></div>
+        </section>
+    
+        <section id="product" class="container">
+          <h3>Our Product</h3>
+          <div class="single-product row gap-4"></div>
+        </section>
+      </div>
+    </main>
 
-    <section class="category container">
-      <h3>Shopping by Categories</h3>
-      <div class="single-category row gap-1 text-center"></div>
-    </section>
-    <section id="product" class="container">
-      <h3>Our Product</h3>
-      <div class="single-product row gap-4"></div>
-    </section>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script type="module" src="./javascript/home.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         fetch("./header.html")
-        .then((response) => response.text())
-        .then((data) => {
-          document.getElementById("header").innerHTML = data;
-          let script = document.createElement("script");
-          script.type = "module";
-          script.src = "./javascript/header.js";
-          document.body.appendChild(script);
-        });
+          .then((response) => response.text())
+          .then((data) => {
+            document.getElementById("header").innerHTML = data;
+            let script = document.createElement("script");
+            script.type = "module";
+            script.src = "./javascript/header.js";
+            document.body.appendChild(script);
+          });
       });
     </script>
   </body>
